# chitchain

./: .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: ci.yml
contracts/chit_chain/: Cargo.toml
contracts/chit_chain/src/: access.rs  events.rs  lib.rs  state.rs  storage.rs  types.rs  upgrade.rs
contracts/chit_chain/tests/: access_control_test.rs  circle_lifecycle_test.rs  deposit_payout_test.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/registry/tests/: registry_integration_test.rs
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: errors.test.ts  errors.ts  stellar-config.ts  utils.test.ts  utils.ts
