[workspace]
members = [
    "contracts/chit_chain",
    "contracts/registry",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.7.6" }

# soroban-env-host's testutils code (pulled in by `cargo test` via soroban-sdk's
# testutils feature) calls ed25519-dalek's SigningKey::generate() with a
# ChaCha20Rng from `rand` 0.8. ed25519-dalek 3.0.0 requires rand_core 0.9's
# CryptoRng trait, which rand 0.8's ChaCha20Rng doesn't implement, so an
# un-pinned resolve grabs 3.0.0 and fails to compile. Pin to the last 2.x
# release, which matches the rand_core version soroban-env-host 21.x expects.
[patch.crates-io]
ed25519-dalek = "=2.1.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true