[package]
name = "chit-chain"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.7.6" }

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }